# upscale-rs

./: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: pixmiller-icon.icns
src/pages/: About.vue  Index.vue
