[package]
name = "PixMiller-App"
version = "0.2.0"
description = "PixMiller Desktop App, to remove image backgrounds in bulk."
authors = ["PixMiller <hello@pixmiller.com>"]
license = "MIT"
repository = "https://github.com/PixMiller/PixMiller_Bulk_Background_Removal_Tool"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.3", features = ["dialog-all", "fs-all", "notification-all", "os-all", "shell-all", "window-all"] }
base64 = "0.20.0"
dirs = "4.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
